[package]
name = "watch-rust"
version = "0.1.0"
authors = ["Shane <seeyx97@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "watch-rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-graphics = "0.8.1"
display-interface = "0.5"
display-interface-spi = "0.5"
mipidsi = "0.9.0"
st7789 = "0.7"
async-io = "2"
async-executor = "1"

[build-dependencies]
embuild = "0.33.0"
