[package]
name = "smart-watch"
version = "0.1.0"
authors = ["Shane <seeyx97@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "smart-watch"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Async runtime and system bindings
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }  # for `link_patches()`

# Graphics and display support
embedded-graphics = "0.8.1"
display-interface = "0.5"
display-interface-spi = "0.5"
mipidsi = "0.9.0"

# General utilities
anyhow = "1.0"

# Optional: for embedded `futures`, but often not needed unless you join tasks
futures-lite = "2.6.0"

[build-dependencies]
embuild = "0.33"
